...
                TvListRow(
                    stringResource(R.string.player_quick_ticker),
                    {
                        model.toggleTicker()
                        model.closeQuickActions()
                    },
                    Modifier.testTag("player-quick-ticker"),
                    trailing = stringResource(if (on) R.string.player_quick_stats_on else R.string.player_quick_stats_off),
                    layout = ListRowLayout(divider = true),
                )
            }
        }
    }
...
